--- a/package.json
+++ b/package.json
@@ -84,13 +84,13 @@
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/context-zone": "2.4.0",
-    "@opentelemetry/exporter-trace-otlp-http": "0.210.0",
-    "@opentelemetry/instrumentation": "0.210.0",
-    "@opentelemetry/instrumentation-fetch": "0.210.0",
-    "@opentelemetry/resources": "2.4.0",
-    "@opentelemetry/sdk-trace-base": "2.4.0",
-    "@opentelemetry/sdk-trace-web": "2.4.0",
+    "@opentelemetry/context-zone": "2.5.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.211.0",
+    "@opentelemetry/instrumentation": "0.211.0",
+    "@opentelemetry/instrumentation-fetch": "0.211.0",
+    "@opentelemetry/resources": "2.5.0",
+    "@opentelemetry/sdk-trace-base": "2.5.0",
+    "@opentelemetry/sdk-trace-web": "2.5.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -116,7 +116,7 @@
     "@streamdown/math": "^1.0.1",
     "@streamdown/mermaid": "^1.0.1",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.91.1",
+    "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.90.20",
     "@upstash/qstash": "^2.9.0",
     "@upstash/ratelimit": "2.0.8",
@@ -132,12 +132,12 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
-    "import-in-the-middle": "2.0.6",
+    "import-in-the-middle": "3.0.0",
     "js-tiktoken": "^1.0.21",
-    "katex": "^0.16.27",
-    "lucide-react": "^0.562.0",
+    "katex": "^0.16.28",
+    "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
-    "motion": "12.27.5",
+    "motion": "12.30.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
@@ -145,13 +145,13 @@
     "react-dom": "^19.2.4",
     "react-error-boundary": "6.1.0",
     "react-hook-form": "^7.71.1",
-    "recharts": "^3.6.0",
+    "recharts": "^3.7.0",
     "require-in-the-middle": "^8.0.1",
-    "resend": "^6.7.0",
-    "shiki": "^3.21.0",
+    "resend": "^6.9.1",
+    "shiki": "^3.22.0",
     "sonner": "^2.0.7",
     "streamdown": "^2.1.0",
-    "stripe": "20.2.0",
+    "stripe": "20.3.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.2",
     "web-vitals": "^5.1.0",
@@ -185,7 +185,7 @@
     "@vitest/ui": "^4.0.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
-    "jsdom": "^27.4.0",
+    "jsdom": "^28.0.0",
     "knip": "5.83.0",
     "madge": "^8.0.0",
     "msw": "^2.12.7",
@@ -197,7 +197,6 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "unified": "^11.0.5",
-    "vercel": "^50.9.6",
     "vitest": "^4.0.18"
   },
   "engines": {
@@ -225,12 +224,9 @@
     "overrides": {
       "axios": "1.13.2",
       "prismjs": ">=1.30.0",
-      "undici": "5.29.0",
+      "undici": "7.20.0",
       "brace-expansion": ">=2.0.2"
     },
-    "ignoredBuiltDependencies": [
-      "esbuild",
-      "msw"
-    ]
+    "ignoredBuiltDependencies": ["esbuild", "msw"]
   }
 }
