chore: update Node version in .nvmrc to v24.13.0 and add new scripts for API route error checking and Zod v4 usage enforcement

--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
     "check:no-secrets:staged": "node scripts/check-no-secrets.mjs --staged",
     "check:no-secrets:full": "node scripts/check-no-secrets.mjs --full",
     "check:no-unknown-casts": "node scripts/check-no-unknown-casts.mjs",
+    "check:api-route-errors": "node scripts/check-api-route-errors.mjs",
+    "check:api-route-errors:full": "node scripts/check-api-route-errors.mjs --full",
+    "check:zod-v4": "node scripts/check-zod-v4-usage.mjs",
+    "check:zod-v4:full": "node scripts/check-zod-v4-usage.mjs --full",
     "deps:audit": "knip --dependencies",
     "deps:audit:prod": "knip --production --dependencies",
     "deps:fix": "knip --fix --dependencies",
