feat: add configuration options for remote image proxy in .env.example, including allowed hosts and max byte limit

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,15 @@ NEXT_PUBLIC_STREAMDOWN_ALLOWED_IMAGE_PREFIXES=
 NEXT_PUBLIC_STREAMDOWN_ALLOWED_LINK_PREFIXES=
 
 # ---------------------------------------------------------------------------
+# Remote image proxy (server-only)
+# ---------------------------------------------------------------------------
+# Comma-separated host allowlist for GET /api/images/proxy (https-only).
+# Example: googleusercontent.com,images.examplecdn.com
+IMAGE_PROXY_ALLOWED_HOSTS=
+# Optional: override remote image max bytes (default 10MB, capped at 25MB).
+IMAGE_PROXY_MAX_BYTES=
+
+# ---------------------------------------------------------------------------
 # Supabase
 # ---------------------------------------------------------------------------
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
