--- a/package.json
+++ b/package.json
@@ -119,11 +119,11 @@
     "@streamdown/math": "^1.0.1",
     "@streamdown/mermaid": "^1.0.1",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.93.3",
+    "@supabase/supabase-js": "^2.94.0",
     "@tanstack/react-query": "^5.90.20",
     "@upstash/qstash": "^2.9.0",
     "@upstash/ratelimit": "2.0.8",
-    "@upstash/redis": "^1.36.1",
+    "@upstash/redis": "^1.36.2",
     "@vercel/otel": "^2.1.0",
     "ai": "6.0.68",
     "amadeus": "^11.0.0",
@@ -140,7 +140,8 @@
     "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
-    "motion": "12.30.0",
+    "mermaid": "^11.12.2",
+    "motion": "12.31.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
@@ -163,7 +164,7 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.13",
+    "@biomejs/biome": "^2.3.14",
     "@playwright/test": "^1.58.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
