--- a/package.json
+++ b/package.json
@@ -231,9 +231,6 @@
       "undici": "7.20.0",
       "brace-expansion": ">=2.0.2"
     },
-    "ignoredBuiltDependencies": [
-      "esbuild",
-      "msw"
-    ]
+    "ignoredBuiltDependencies": ["esbuild", "msw"]
   }
 }
