--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "check:no-secrets": "node scripts/check-no-secrets.mjs",
     "check:no-secrets:staged": "node scripts/check-no-secrets.mjs --staged",
     "check:no-secrets:full": "node scripts/check-no-secrets.mjs --full",
+    "check:otel-convergence": "node scripts/check-otel-convergence.mjs",
     "check:no-unknown-casts": "node scripts/check-no-unknown-casts.mjs",
     "check:api-route-errors": "node scripts/check-api-route-errors.mjs",
     "check:api-route-errors:full": "node scripts/check-api-route-errors.mjs --full",
@@ -88,9 +89,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-zone": "2.5.1",
-    "@opentelemetry/exporter-trace-otlp-http": "0.211.0",
-    "@opentelemetry/instrumentation": "0.211.0",
-    "@opentelemetry/instrumentation-fetch": "0.211.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.212.0",
+    "@opentelemetry/instrumentation": "0.212.0",
+    "@opentelemetry/instrumentation-fetch": "0.212.0",
     "@opentelemetry/resources": "2.5.1",
     "@opentelemetry/sdk-trace-base": "2.5.1",
     "@opentelemetry/sdk-trace-web": "2.5.1",
@@ -135,7 +136,7 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
-    "import-in-the-middle": "3.0.0",
+    "import-in-the-middle": "2.0.6",
     "js-tiktoken": "^1.0.21",
     "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
@@ -150,7 +151,7 @@
     "react-error-boundary": "6.1.1",
     "react-hook-form": "^7.71.1",
     "recharts": "^3.7.0",
-    "require-in-the-middle": "^8.0.1",
+    "require-in-the-middle": "8.0.1",
     "resend": "^6.9.2",
     "shiki": "^3.22.0",
     "sonner": "^2.0.7",
